# chorale

./: .clang-tidy  .gitignore  COPYING  COPYING.GPL  ChangeLog  Doxyfile  INSTALL  INSTALL.WIN32  Make.common  Make.config.in  Makefile  MediaBorg  README  README.md  SConstruct  TODO  config.h  config.h.in  configure.ac
autotools/: .gitignore  aclocal.m4  ax_boost.m4
choralecd/: .cvsignore  Makefile  browse_widget.cpp  browse_widget.h  cd.xpm  cd_progress.cpp  cd_progress.h  cd_widget.cpp  cd_widget.h  cd_window.cpp  cd_window.h  choralecd.cpp  cloud.cpp  cloud.h  cloud_database_widget.cpp  cloud_database_widget.h  cloud_style.cpp  cloud_style.h  cloud_upnp_databases.cpp  cloud_upnp_databases.h  cloud_window.cpp  cloud_window.h  db_widget.cpp  db_widget.h  dir.xpm  empeg.xpm  events.h  explorer_window.cpp  explorer_window.h  features.h  ffwd.xpm  file.xpm  folder.xpm  main_window.cpp  main_window.h  network.xpm  output.xpm  output_widget.cpp  output_widget.h  pause.xpm  (+28 more)
choraled/: .cvsignore  .gitignore  Makefile  cd.cpp  cd.h  choraled.cpp  choralesvc.cpp  database.cpp  database.h  ip_filter.cpp  ip_filter.h  main.cpp  main.h  nfs.cpp  nfs.h  web.cpp  web.h
choraleutil/: .cvsignore  Makefile  doctor.cpp  play.cpp  playlist2dir.cpp  pparse.cpp  protocoltool.1  protocoltool.cpp  readtags.cpp  squirt.cpp  tcp.cpp  timedb.cpp  wall.cpp
imagery/: .gitignore  Makefile  default.css
libchoralecd/: .gitignore  README  browse_widget.cpp  cd_progress.cpp  cd_progress.h  cd_widget.cpp  cd_widget.h  cd_window.cpp  cd_window.h  choralecd.rc  cloud.cpp  cloud_style.cpp  cloud_style.h  cloud_upnp_databases.h  cloud_window.cpp  db_widget.cpp  db_widget.h  explorer_window.h  features.h  main_window.cpp  main_window.h  output_widget.cpp  output_widget.h  setlist_model.h  settings.cpp  settings_window.h  tree_model.cpp  tree_model.h
libdav/: Makefile  server.cpp  server.h
libdb/: Makefile  db.h  dbc.cpp  dbc.h  dbc_wrap.h  delegating_query.cpp  delegating_query.h  delegating_rs.cpp  delegating_rs.h  empty_recordset.h  free_rs.cpp  free_rs.h  query.cpp  query.h  query_impl.cpp  query_impl.h  readonly_rs.cpp  readonly_rs.h  recordset.h
libdbempeg/: Makefile  allocate_id.cpp  allocate_id.h  connection.cpp  connection.h  db.cpp  db.h  query.cpp  query.h  rs.cpp  rs.h
libdbinno/: Makefile  database.cpp  database.h  recordset.cpp  recordset.h
libdblocal/: Makefile  database_updater.cpp  database_updater.h  db.cpp  db.h  file_scanner.cpp  file_scanner.h  tag_serialiser.cpp  tag_serialiser.h
libdbmerge/: Makefile  db.cpp  db.h
libdbreceiver/: .cvsignore  .gitignore  Makefile  connection.cpp  connection.h  database.cpp  database.h  db.cpp  db.h  query.cpp  query.h  receiverscan.cpp  recordset.cpp  recordset.h  rs.cpp  rs.h
libdbsteam/: .cvsignore  Makefile  db.cpp  db.h  query.cpp  query.h  rs.cpp  rs.h  test.cpp
libdbupnp/: .cvsignore  Makefile  connection.cpp  connection.h  database.cpp  database.h  db.cpp  db.h  query.cpp  query.h  recordset.cpp  recordset.h  rs.cpp  rs.h
libempeg/: Makefile  crc16.cpp  crc16.h  discovery.cpp  discovery.h  fid_stream.cpp  fid_stream.h  protocol.h  protocol_client.cpp  protocol_client.h
libimport/: .cvsignore  .gitignore  2rip.cpp  Makefile  audio_cd.cpp  audio_cd.h  audio_cd2.cpp  audio_encoder.h  cd_content_factory.cpp  cd_content_factory.h  cd_drive.h  cd_drives.cpp  cd_drives.h  cd_toc_task.cpp  cd_toc_task.h  cddb_service.cpp  cddb_service.h  dvd_info.cpp  dvd_info.h  eject_task.cpp  eject_task.h  encoding_task.cpp  encoding_task.h  encoding_task_flac.cpp  encoding_task_flac.h  encoding_task_mp3.cpp  encoding_task_mp3.h  file_notifier.cpp  file_notifier.h  file_scanner.cpp  file_scanner.h  file_scanner_thread.cpp  file_scanner_thread.h  flac_encoder.cpp  flac_encoder.h  local_cd_drive.cpp  local_cd_drive.h  mp3_encoder.cpp  mp3_encoder.h  playlist.cpp  (+39 more)
libisam/: Makefile  direct_page_handler.cpp  direct_page_handler.h  file.cpp  file.h  format.h  format.txt  isamtest.cpp  key_storage.cpp  key_storage.h  page_allocator.cpp  page_allocator.h  page_handler.h  page_locking.cpp  page_locking.h
libkarma/: Makefile  db_writer.cpp  db_writer.h  protocol.h  protocol_client.cpp  protocol_client.h
libmediadb/: Makefile  allocate_id.cpp  allocate_id.h  db.h  didl.cpp  didl.h  example.xml  fake_database.h  localdb.cpp  localdb.h  registry.cpp  registry.h  schema.cpp  schema.h  sync.cpp  sync.h  sync_test.cpp  web_content.cpp  web_content.h  xml.cpp  xml.h
libmediatree/: .cvsignore  Makefile  directory.cpp  directory.h  node.cpp  node.h  node_enumerator.h  query.cpp  query.h  results.cpp  results.h  root.cpp  root.h
libmisc/: .gitignore  activity  activity-month
liboutput/: .cvsignore  Makefile  avfoundation.h  avfoundation.mm  flac.cpp  flac.h  gstreamer.cpp  gstreamer.h  oss.cpp  oss.h  playstate.h  queue.cpp  queue.h  registry.cpp  registry.h  test_url_player.h  upnp.cpp  upnp.h  upnpav.cpp  upnpav.h  urlplayer.cpp  urlplayer.h
libreceiver/: .cvsignore  Makefile  ssdp.cpp  ssdp.h  tags.cpp  tags.h
libreceiverd/: .cvsignore  Makefile  README  content_factory.cpp  content_factory.h  mount.cpp  mount.h  nfs.cpp  nfs.h  portmap.cpp  portmap.h  rpc.cpp  rpc.h  tarfs.cpp  tarfs.h  vfs.h
libtv/: .gitignore  Makefile  database.cpp  database.h  dvb.cpp  dvb.h  dvb_audio_stream.cpp  dvb_audio_stream.h  dvb_recording.cpp  dvb_recording.h  dvb_service.cpp  dvb_service.h  dvb_video_stream.cpp  dvb_video_stream.h  epg.cpp  epg.h  epg_database.cpp  epg_database.h  mp3_stream.cpp  mp3_stream.h  program_stream.cpp  program_stream.h  recording.cpp  recording.h  tsdemux.cpp  web_epg.cpp  web_epg.h
libui/: Makefile  frame_buffer.cpp  frame_buffer.h  window.cpp  window.h
libuidarwin/: Makefile  scheduler.cpp  scheduler.h
libuiqt/: Makefile  frame_buffer.cpp  frame_buffer.h  frame_buffer_window.cpp  frame_buffer_window.h  scheduler.cpp  scheduler.h
libupnp/: .cvsignore  .gitignore  AVTransport.xml  AVTransport2.xml  ConnectionManager.xml  ContentDirectory.xml  ContentDirectory2.xml  ContentSync.xml  DeviceSecurity.xml  MSMediaReceiverRegistrar.xml  (+37 more)
(+179 files in other folders)
